--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             logo buscar
         </header>
         <img src="img/fondo.jpg" width="350" >
+        <footer>
+        Hola paul
+        </footer>
     </div>
         
 
